<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status_bar_book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="13sp"
            tools:text="Author" />

        <TextView
            android:id="@+id/status_bar_book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#000"
            android:textSize="16sp"
            tools:text="Title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/status_bar_prev"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/circle_button_bg"
            android:clickable="true"
            android:contentDescription="@string/previous"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/status_bar_play"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/circle_button_bg"
            android:clickable="true"
            android:contentDescription="@string/play"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/play" />

        <ImageView
            android:id="@+id/status_bar_pause"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/circle_button_bg"
            android:clickable="true"
            android:contentDescription="@string/pause"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/pause"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/status_bar_next"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/circle_button_bg"
            android:clickable="true"
            android:contentDescription="@string/next"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/next" />

    </LinearLayout>
</LinearLayout>