<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/inputDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/book_edit_dialog_book_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_name_hint">

                <EditText
                    android:id="@+id/book_edit_dialog_book_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/book_edit_dialog_book_author_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/book_author_hint">

                <EditText
                    android:id="@+id/book_edit_dialog_book_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/book_edit_dialog_book_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/book_text_hint">

                <EditText
                    android:id="@+id/book_edit_dialog_book_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="4" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_gravity="end"
                android:clickable="true"
                android:id="@+id/edit_book_text_button"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit text"
                android:focusable="true" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>