<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <include layout="@layout/header_layout" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/fragment_book_list_waiter_mask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/bookListContainer"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/book_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/widget_book_list_item"
                android:background="@color/book_list_listView_background"
                android:paddingBottom="@dimen/list_vertical_margin"
                android:paddingTop="@dimen/list_vertical_margin" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/noDataContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/empty_book_list"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />
                <TextView
                    android:layout_gravity="center"
                    android:text="You haven't any book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </FrameLayout>


        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/add_book_fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            fab:menu_animationDelayPerItem="50"
            fab:menu_backgroundColor="@android:color/transparent"
            fab:menu_colorNormal="@color/book_list_fab_menu_color_normal"
            fab:menu_colorPressed="@color/book_list_fab_menu_color_pressed"
            fab:menu_colorRipple="@color/book_list_fab_menu_color_ripple"
            fab:menu_fab_hide_animation="@anim/hide_to_bottom"
            fab:menu_fab_label="@string/add_book"
            fab:menu_fab_show_animation="@anim/show_from_bottom"
            fab:menu_fab_size="normal"
            fab:menu_icon="@drawable/fab_menu_plus"
            fab:menu_labels_colorNormal="@color/book_list_fab_menu_label_color_normal"
            fab:menu_labels_colorPressed="@color/book_list_fab_menu_label_color_pressed"
            fab:menu_labels_colorRipple="@color/book_list_fab_menu_label_color_ripple"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_position="left"
            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="false"
            fab:menu_labels_textColor="#FFFFFF"
            fab:menu_labels_textSize="@dimen/book_list_fab_menu_label_text_size"
            fab:menu_openDirection="up"
            fab:menu_shadowColor="@color/book_list_fab_menu_shadow"
            fab:menu_shadowRadius="2dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="1dp"
            fab:menu_showShadow="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/add_book_from_file_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fab_subitem_open_file"
                fab:fab_colorNormal="@color/book_list_fab_menu_color_normal"
                fab:fab_colorPressed="@color/book_list_fab_menu_color_pressed"
                fab:fab_colorRipple="@color/book_list_fab_menu_color_ripple"
                fab:fab_label="@string/add_book_from_file"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/add_book_create_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/book_list_fab_menu_color_normal"
                fab:fab_colorPressed="@color/book_list_fab_menu_color_pressed"
                fab:fab_colorRipple="@color/book_list_fab_menu_color_ripple"
                android:src="@drawable/fab_subitem_create_file"
                fab:fab_label="@string/add_book_create"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/add_book_download_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/book_list_fab_menu_color_normal"
                fab:fab_colorPressed="@color/book_list_fab_menu_color_pressed"
                fab:fab_colorRipple="@color/book_list_fab_menu_color_ripple"
                android:src="@drawable/fab_subitem_download_file"
                fab:fab_label="@string/add_book_download"
                fab:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>

    </FrameLayout>
</LinearLayout>